<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="popularMovies">Popular Movies</string>
    <string name="stockHawk">Stock Hawk</string>
    <string name="buildItBigger">Build It Bigger</string>
    <string name="makeAppMaterial">Make Your App Material</string>
    <string name="goUbiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
</resources>
