<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mmorales.myappportfolio.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:text="@string/title"
            android:textAppearance="?android:textAppearanceLarge"
            android:id="@+id/title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_below="@id/title">

            <Button
                android:id="@+id/popMovies"
                style="@style/ButtonAppearance"
                android:text="@string/popularMovies"
                android:onClick="onClickHandler" />

            <Button
                android:id="@+id/stockHawk"
                style="@style/ButtonAppearance"
                android:text="@string/stockHawk"
                android:onClick="onClickHandler" />

            <Button
                android:id="@+id/buildBigger"
                style="@style/ButtonAppearance"
                android:text="@string/buildItBigger"
                android:onClick="onClickHandler" />

            <Button
                android:id="@+id/makeAppMaterial"
                style="@style/ButtonAppearance"
                android:text="@string/makeAppMaterial"
                android:onClick="onClickHandler" />

            <Button
                android:id="@+id/goUbiquitous"
                style="@style/ButtonAppearance"
                android:text="@string/goUbiquitous"
                android:onClick="onClickHandler" />

            <Button
                android:id="@+id/capstone"
                style="@style/ButtonAppearance"
                android:text="@string/capstone"
                android:onClick="onClickHandler" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>